create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -818,7 +818,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -1139,7 +1139,7 @@ a {
   text-align: left;
 }
 .cid-udA338zsBY .mbr-section-title {
-  color: #bf213e;
+  color: #e3242b;
 }
 .cid-uakyEJYFzE {
   padding-top: 3rem;
@@ -1529,7 +1529,7 @@ a {
   max-width: 800px;
 }
 .cid-udAxdARdQ5 .mbr-section-title {
-  color: #bf213e;
+  color: #e3242b;
 }
 .cid-udHdc9dgi2 {
   padding-top: 30px;
@@ -1657,7 +1657,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -2219,7 +2219,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-ub4AVRq2VE .navbar.opened {
   transition: all 0.3s;
@@ -2702,7 +2702,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -2972,7 +2972,7 @@ a {
   top: 0;
 }
 .cid-udAFS7wf2m .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-ub4fcWI0fW {
   padding-top: 7rem;
@@ -3157,7 +3157,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -3427,7 +3427,7 @@ a {
   top: 0;
 }
 .cid-udEB3PisEv .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-uakIEiqp4J {
   padding-top: 6rem;
@@ -3623,7 +3623,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -3893,7 +3893,7 @@ a {
   top: 0;
 }
 .cid-udAL9IUUjn .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-udIwnykQEC {
   padding-top: 5rem;
@@ -4113,7 +4113,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-ucEAPGGeOV .navbar.opened {
   transition: all 0.3s;
@@ -4383,7 +4383,7 @@ a {
   top: 0;
 }
 .cid-udEzbL5oO4 .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-udIybrAyPK {
   padding-top: 5rem;
@@ -4603,7 +4603,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -4873,7 +4873,7 @@ a {
   top: 0;
 }
 .cid-udEzICayGx .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-uakHx4JR5T {
   background-image: url("../../../assets/images/pngwing.com-12-salin-2000x1284.png");
@@ -5027,7 +5027,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -5297,7 +5297,7 @@ a {
   top: 0;
 }
 .cid-udEBaStmxm .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-uakJiySal6 {
   padding-top: 4rem;
@@ -5483,7 +5483,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -5753,7 +5753,7 @@ a {
   top: 0;
 }
 .cid-udEBfIR2v5 .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-uakJLP24Cf {
   padding-top: 6rem;
@@ -5909,7 +5909,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -6179,7 +6179,7 @@ a {
   top: 0;
 }
 .cid-udEBm0ZUiv .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-uakK3HA3od {
   padding-top: 6rem;
@@ -6349,7 +6349,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -6884,7 +6884,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
 }
 .cid-ub4pTpr0F9 .navbar.opened {
   transition: all 0.3s;
@@ -7154,7 +7154,7 @@ a {
   top: 0;
 }
 .cid-udEBuSWtn3 .mbr-section-title {
-  color: #bf213e;
+  color: #39ff14;
 }
 .cid-ub4ylwjsbQ {
   padding-top: 6rem;
