--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1094,7 +1094,7 @@ a {
   background: #ffffff;
 }
 .cid-ub3SAlahsx .mbr-section-title {
-  color: #39ff14;
+  color: #9cff2e;
   text-align: center;
 }
 .cid-ub3SAlahsx .mbr-text,
