create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1182,9 +1182,9 @@ a {
   color: #bf213e;
 }
 .cid-udFcBqZb09 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-  background-image: url("../../../assets/images/pngwing.com-8-salin-2000x1983.png");
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-image: url("../../../assets/images/pngwing.com-salin-2000x2000.png");
 }
 .cid-udFcBqZb09 .mbr-fallback-image.disabled {
   display: none;
@@ -1529,13 +1529,16 @@ a {
   max-width: 800px;
 }
 .cid-udAxdARdQ5 .mbr-section-title {
-  color: #e3242b;
+  color: #bf213e;
 }
 .cid-udHdc9dgi2 {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
 .cid-uakyhva5D9 {
   z-index: 1000;
@@ -2099,6 +2102,9 @@ a {
   background-color: #bf213e;
   overflow: hidden;
 }
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
+}
 .cid-ub4AVRq2VE {
   z-index: 1000;
   width: 100%;
@@ -2582,6 +2588,9 @@ a {
   background-color: #bf213e;
   overflow: hidden;
 }
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
+}
 .cid-uakyhva5D9 {
   z-index: 1000;
   width: 100%;
@@ -3036,6 +3045,9 @@ a {
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
 .cid-uakyhva5D9 {
   z-index: 1000;
@@ -3502,6 +3514,9 @@ a {
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
 .cid-uakyhva5D9 {
   z-index: 1000;
@@ -3993,6 +4008,9 @@ a {
   background-color: #bf213e;
   overflow: hidden;
 }
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
+}
 .cid-ucEAPGGeOV {
   z-index: 1000;
   width: 100%;
@@ -4483,6 +4501,9 @@ a {
   background-color: #bf213e;
   overflow: hidden;
 }
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
+}
 .cid-uakyhva5D9 {
   z-index: 1000;
   width: 100%;
@@ -4906,6 +4927,9 @@ a {
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
 .cid-uakyhva5D9 {
   z-index: 1000;
@@ -5363,6 +5387,9 @@ a {
   background-color: #bf213e;
   overflow: hidden;
 }
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
+}
 .cid-uakyhva5D9 {
   z-index: 1000;
   width: 100%;
@@ -5788,6 +5815,9 @@ a {
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
 .cid-uakyhva5D9 {
   z-index: 1000;
@@ -6228,6 +6258,9 @@ a {
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
 .cid-uakyhva5D9 {
   z-index: 1000;
@@ -6764,6 +6797,9 @@ a {
   background-color: #bf213e;
   overflow: hidden;
 }
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
+}
 .cid-ub4pTpr0F9 {
   z-index: 1000;
   width: 100%;
@@ -7232,4 +7268,7 @@ a {
   padding-bottom: 30px;
   background-color: #bf213e;
   overflow: hidden;
+}
+.cid-udHdc9dgi2 .media-container-row .mbr-text {
+  color: #fafafa;
 }
