--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -115,7 +115,7 @@ body {
   border-radius: 4px;
 }
 .bg-primary {
-  background-color: #393e46 !important;
+  background-color: #bf213e !important;
 }
 .bg-success {
   background-color: #bf213e !important;
@@ -131,8 +131,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #393e46 !important;
-  border-color: #393e46 !important;
+  background-color: #bf213e !important;
+  border-color: #bf213e !important;
   color: #ffffff !important;
   box-shadow: none;
 }
@@ -141,15 +141,15 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: inherit;
-  background-color: #505762 !important;
-  border-color: #505762 !important;
+  background-color: #dc3755 !important;
+  border-color: #dc3755 !important;
   box-shadow: none;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #505762 !important;
-  border-color: #505762 !important;
+  background-color: #dc3755 !important;
+  border-color: #dc3755 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -308,23 +308,23 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: #393e46;
-  color: #393e46;
+  border-color: #bf213e;
+  color: #bf213e;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #121416 !important;
+  color: #751426 !important;
   background-color: transparent !important;
-  border-color: #121416 !important;
+  border-color: #751426 !important;
   box-shadow: none !important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #393e46 !important;
-  border-color: #393e46 !important;
+  background-color: #bf213e !important;
+  border-color: #bf213e !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -474,7 +474,7 @@ body {
   border-color: #fafafa !important;
 }
 .text-primary {
-  color: #393e46 !important;
+  color: #bf213e !important;
 }
 .text-secondary {
   color: #ffa600 !important;
@@ -500,7 +500,7 @@ body {
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
-  color: #0b0c0e !important;
+  color: #681222 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus,
@@ -551,7 +551,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-position: 0px 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #393e46;
+  color: #bf213e;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -569,8 +569,8 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-color: #ffea64;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #393e46;
-  border-color: #393e46;
+  background-color: #bf213e;
+  border-color: #bf213e;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -578,11 +578,11 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 a,
 a:hover {
-  color: #393e46;
+  color: #bf213e;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #aab0ba;
+  color: #e8788c;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -613,7 +613,7 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px 0px, rgba(0, 0, 0, 0.07) 0px 1px 3px 0px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
-  border-color: #393e46 !important;
+  border-color: #bf213e !important;
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'Poppins', sans-serif;
@@ -625,19 +625,19 @@ a:hover {
   font-size: 1.75rem;
 }
 blockquote {
-  border-color: #393e46;
+  border-color: #bf213e;
 }
 /* Forms */
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #393e46;
+  background-color: #bf213e;
   color: #ffffff;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #393e46;
+  border-color: #bf213e;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -649,14 +649,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #393e46;
-  border-bottom-color: #393e46;
+  border-top-color: #bf213e;
+  border-bottom-color: #bf213e;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #ffffff !important;
-  background-color: #393e46 !important;
+  background-color: #bf213e !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -687,7 +687,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23393e46' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23bf213e' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -732,7 +732,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -818,7 +818,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -1574,7 +1574,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -1660,7 +1660,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -2139,7 +2139,7 @@ a {
 }
 .cid-ub4AVRq2VE .dropdown-item:hover,
 .cid-ub4AVRq2VE .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-ub4AVRq2VE .dropdown-item:hover span {
@@ -2225,7 +2225,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-ub4AVRq2VE .navbar.opened {
   transition: all 0.3s;
@@ -2625,7 +2625,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -2711,7 +2711,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -3083,7 +3083,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -3169,7 +3169,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -3552,7 +3552,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -3638,7 +3638,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -4045,7 +4045,7 @@ a {
 }
 .cid-ucEAPGGeOV .dropdown-item:hover,
 .cid-ucEAPGGeOV .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-ucEAPGGeOV .dropdown-item:hover span {
@@ -4131,7 +4131,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-ucEAPGGeOV .navbar.opened {
   transition: all 0.3s;
@@ -4538,7 +4538,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -4624,7 +4624,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -4965,7 +4965,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -5051,7 +5051,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -5424,7 +5424,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -5510,7 +5510,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -5853,7 +5853,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -5939,7 +5939,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -6296,7 +6296,7 @@ a {
 }
 .cid-uakyhva5D9 .dropdown-item:hover,
 .cid-uakyhva5D9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-uakyhva5D9 .dropdown-item:hover span {
@@ -6382,7 +6382,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-uakyhva5D9 .navbar.opened {
   transition: all 0.3s;
@@ -6694,7 +6694,7 @@ a {
 .cid-uakKNrUaem .mbr-iconfont {
   font-size: 3rem;
   padding-right: 1.5rem;
-  color: #393e46;
+  color: #bf213e;
 }
 .cid-uakKNrUaem P {
   color: #232323;
@@ -6837,7 +6837,7 @@ a {
 }
 .cid-ub4pTpr0F9 .dropdown-item:hover,
 .cid-ub4pTpr0F9 .dropdown-item:focus {
-  background: #393e46 !important;
+  background: #bf213e !important;
   color: white !important;
 }
 .cid-ub4pTpr0F9 .dropdown-item:hover span {
@@ -6923,7 +6923,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
 }
 .cid-ub4pTpr0F9 .navbar.opened {
   transition: all 0.3s;
